<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_gravity="center">
		<TextView android:id="@+id/hicriTitle" android:typeface="serif"
			android:textStyle="bold" android:text="@string/conversion"
			android:layout_height="fill_parent" android:layout_width="fill_parent"
			android:layout_gravity="center" android:textColor="#ff0000"
			android:textSize="15sp">
		</TextView>
	</LinearLayout>

	<LinearLayout android:orientation="horizontal"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center">
		<LinearLayout android:id="@+id/LinearLayoutDay"
			android:orientation="vertical" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:text="@string/dayLabel" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/dayLabel" android:textColor="@color/mavi_color">
			</TextView>
			<EditText android:id="@+id/day" android:numeric="integer"
				android:layout_x="18px" android:text="30" android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			</EditText>
			<ImageButton android:src="@android:drawable/ic_media_previous"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:id="@+id/previousDay" android:layout_gravity="center">
			</ImageButton>
		</LinearLayout>
		<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:orientation="vertical"
			android:id="@+id/LinearLayoutMonth">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/monthLabel"
				android:id="@+id/monthLabel" android:textColor="@color/mavi_color">
			</TextView>
			<Spinner android:id="@+id/monthSpinner" android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			</Spinner>
			<Button android:id="@+id/convert" android:text="@string/convertButton"
				android:textSize="18sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textColor="#00422a">
			</Button>
		</LinearLayout>
		<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/LinearLayoutYear"
			android:orientation="vertical">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/yearLabel" android:id="@+id/yearLabel" android:textColor="@color/mavi_color">
			</TextView>
			<EditText android:id="@+id/year" android:textSize="18sp"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:numeric="integer|signed" android:text="-4712">
			</EditText>
			<ImageButton android:src="@android:drawable/ic_media_next"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:id="@+id/nextDay">
			</ImageButton>
		</LinearLayout>
	</LinearLayout>



	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:orientation="vertical"
		android:layout_gravity="center_horizontal">
		<CheckBox android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/after_magrib"
			android:text="@string/after_magrib" android:textSize="18sp"></CheckBox>
		<TextView android:id="@+id/hicriDisplay" android:typeface="serif"
			android:textStyle="bold" android:text="Text" android:textSize="20sp"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:layout_gravity="center_horizontal" android:textColor="#00ff2a">
		</TextView>
	</LinearLayout>
	<LinearLayout android:orientation="vertical"
		android:layout_width="wrap_content" android:layout_height="wrap_content">
		<TextView android:id="@+id/note" android:layout_height="fill_parent"
			android:layout_width="fill_parent"
			android:text="@string/description"
			android:textSize="10sp">
		</TextView>
	</LinearLayout>
</LinearLayout>

