<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:gravity="center" >

    <AbsoluteLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/AbsoluteLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#000000" >

        <Button
            android:id="@+id/previousDay"
            style="@style/ButtonText"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_x="49dp"
            android:layout_y="194dp"
            android:background="@drawable/btn_selector"
            android:text="&lt;"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/convert"
            style="@style/ButtonText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_x="125dp"
            android:layout_y="194dp"
            android:background="@drawable/btn_selector"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/convertButton"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/nextDay"
            style="@style/ButtonText"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_x="236dp"
            android:layout_y="194dp"
            android:background="@drawable/btn_selector"
            android:text=">"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/after_magrib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="125dp"
            android:layout_y="250dp"
            android:text="@string/after_magrib"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffffff" />

        <EditText
            android:id="@+id/year"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_x="236dp"
            android:layout_y="130dp"
            android:background="@drawable/btn_selector"
            android:ems="10"
            android:numeric="integer|signed"
            android:text="-4712"
            android:textColor="#ffffffff"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/day"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_x="49dp"
            android:layout_y="130dp"
            android:background="@drawable/btn_selector"
            android:ems="10"
            android:numeric="integer"
            android:text="30"
            android:textColor="#ffffffff" />

        <Spinner
            android:id="@+id/monthSpinner"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_x="125dp"
            android:layout_y="130dp"
            android:background="@drawable/btn_selector" />

        <TextView
            android:id="@+id/hicriTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="18dp"
            android:layout_y="29dp"
            android:text="@string/conversion"
            android:textColor="#ff0000"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/dayLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="49dp"
            android:layout_y="100dp"
            android:text="@string/dayLabel"
            android:textColor="@color/mavi_color" />

        <TextView
            android:id="@+id/yearLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="236dp"
            android:layout_y="100dp"
            android:text="@string/yearLabel"
            android:textColor="@color/mavi_color" />

        <TextView
            android:id="@+id/monthLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="125dp"
            android:layout_y="100dp"
            android:text="@string/monthLabel"
            android:textColor="@color/mavi_color" />

        <TextView
            android:id="@+id/hicriDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="14dp"
            android:layout_y="305dp"
            android:text="14 Muharrem 1434 Day of Ashura "
            android:textColor="#00ff2a"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/note"
            android:layout_width="270dp"
            android:layout_height="46dp"
            android:layout_x="49dp"
            android:layout_y="367dp"
            android:text="@string/description"
            android:textColor="#ffffffff"
            android:textSize="10sp" />

    </AbsoluteLayout>

</LinearLayout>