<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1" >

    <FrameLayout
        android:id="@+id/FrameLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/PrevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev" >
        </Button>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/next" >
        </Button>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:baselineAligned="false" >

            <TextView
                android:id="@+id/LunationTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Lunation: 17192"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/mavi_color" >
            </TextView>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/FrameLayout07"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/LinearLayout11"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent" >

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall" >
                </TextView>

              
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout12"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/TextView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_moon"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/mavi_color" >
                </TextView>

                <TextView
                    android:id="@+id/NewMoonTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text=" 01/07/2011 08:53:19p?"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </TextView>

                <TextView
                    android:id="@+id/SolarEclipseTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/possible_penumbral_eclipse"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/red_color" >
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/FrameLayout06"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/LinearLayout09"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:baselineAligned="false" >

          

            <LinearLayout
                android:id="@+id/LinearLayout10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/TextView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_crescent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/mavi_color" >
                </TextView>

                <TextView
                    android:id="@+id/NewCrescentTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text=" 01/07/2011 08:53:19p?"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </TextView>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "
                    android:textAppearance="?android:attr/textAppearanceSmall" >
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/FrameLayout05"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/LinearLayout07"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >


            <LinearLayout
                android:id="@+id/LinearLayout08"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/TextView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_quarter"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/mavi_color" >
                </TextView>

                <TextView
                    android:id="@+id/FirstQuarterTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text=" 01/07/2011 08:53:19p?"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </TextView>

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "
                    android:textAppearance="?android:attr/textAppearanceSmall" >
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/FrameLayout04"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/LinearLayout04"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

         
            <LinearLayout
                android:id="@+id/LinearLayout06"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/TextView09"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_moon"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/mavi_color" >
                </TextView>

                <TextView
                    android:id="@+id/FullMoonTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text=" 01/07/2011 08:53:19p?"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </TextView>

                <TextView
                    android:id="@+id/LunarEclipseTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/lunar_eclipse"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/red_color" >
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >


            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_quarter"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/mavi_color" >
                </TextView>

                <TextView
                    android:id="@+id/LastQaurterTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text=" 01/07/2011 08:53:19p?"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </TextView>

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "
                    android:textAppearance="?android:attr/textAppearanceSmall" >
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>